openshift-introduction/assets/hello.yml
# clean up labels
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      custom_label: hello_label
    name: hello
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: hello:latest
    source:
      dockerfile: |-
        FROM centos:7
        RUN yum install -y nc
        ENTRYPOINT ["/bin/sh", "-c", "while true ; do nc -l -p 8080 -c 'echo -e \"HTTP/1.1 200 OK\n\n$(date)\"'; done"]
      type: Dockerfile
    strategy:
      type: Docker
      
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      custom_label: hello_label
    name: hello
  spec:
    lookupPolicy:
      local: true
      
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      custom_label: hello_label
    name: hello
  spec:
    replicas: 1
    selector:
      deploymentconfig_selector: hello_deploymentconfig_selector
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          custom_label: hello_label
          deploymentconfig_selector: hello_deploymentconfig_selector
          service_selector: hello_service_selector
      spec:
        containers:
        - image: hello
          name: hello
          ports:
          - containerPort: 8080
            protocol: TCP

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      custom_label: hello_label
    name: hello
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      service_selector: hello_service_selector
      
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      custom_label: hello_label
    name: hello
  spec:
    to:
      kind: Service
      name: hello
